# mcp_server_tutorials

./: README.md  pyproject.toml
API/: 1_first_api.py  2_multiple_endpoints.py  3_create_data.py  4_query_parms.py  5_path_params.py  6_connect_api_with_DB.py  7_production_style_api.py  how_to_run_api_files.txt  test.db  theory.txt
MCP_servers/: server.py  theory.txt
