[tool.poetry]
name = "mcp_sever"
version = "0.1.0"
description = "Understainding and Creating MCP server"
package-mode = false
authors = ["Prasad Ovhal"]

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.135.1"
uvicorn = "^0.42.0"
pydantic = "^2.12.5"
redis = "^7.3.0"
sqlalchemy = "^2.0.48"

[tool.poetry.group.dev.dependencies]
ipykernel = "*"


[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"