[tool.poetry]
name = "mcp_sever"
version = "0.1.0"
description = "Understainding and Creating MCP server"
package-mode = false
authors = ["Prasad Ovhal"]

[tool.poetry.dependencies]
python = "3.14.*"
mcp = "^1.0.0"
anyio = "^4.0.0"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
ipython = "*"
rich = "*"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"